Fix avatar/message alignment when message is long.
When the message was long, the box with the message would be pushed down
below the avatar.

This patch fixes the problem by limiting the available width of both the
avatar and the message box.

This means that landscape avatar images will now be limited to a width
of 45px, but that is probably preferred anyway.

--- a/chat/public/css/chat.css
+++ b/chat/public/css/chat.css
@@ -103,26 +103,40 @@ body.view-in-course .course-wrapper.chromeless {
 
 .chat-block .avatar {
     height: 45px;
-    min-width: 45px;
+    width: 45px;
     display: inline-block;
+    position: relative;
     vertical-align: bottom;
 }
 
 .chat-block .avatar img {
     box-sizing: border-box;
     display: block;
-    height: 100%;
-    width: auto;
+    max-height: 100%;
+    max-width: 100%;
     border-width: 2px;
     border-style: solid;
     border-color: #39b549;
     border-radius: 50%;
+    position: absolute;
+    bottom: 0;
+}
+
+.chat-block .bot .avatar img {
+    left: 0;
+}
+
+.chat-block .user .avatar img {
+    right: 0;
 }
 
 .chat-block .message-body {
     position: relative;
     display: inline-block;
     vertical-align: middle;
+    /* Chat message can take the available width, reduced by the width of the avatar (45px)
+       and the margin between the avatar and the message (25px). */
+    max-width: calc(100% - 45px - 25px);
 }
 
 .chat-block .message-body p {
